<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_expenses"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/title_expenses" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_baseline_shopping_basket_24"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_payments"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/title_payments" />

    <item
        android:id="@+id/navigation_stores"
        android:icon="@drawable/ic_baseline_storefront_24"
        android:title="@string/title_stores" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>