<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_expenses">

    <fragment
        android:id="@+id/navigation_expenses"
        android:name="com.example.accountbookforme.ui.expenses.ExpensesFragment"
        android:label="@string/title_expenses"
        tools:layout="@layout/fragment_expenses" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.accountbookforme.ui.categories.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_payments"
        android:name="com.example.accountbookforme.ui.payments.PaymentsFragment"
        android:label="@string/title_payments"
        tools:layout="@layout/fragment_payments" />

    <fragment
        android:id="@+id/navigation_stores"
        android:name="com.example.accountbookforme.ui.stores.StoresFragment"
        android:label="@string/title_stores"
        tools:layout="@layout/fragment_stores" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.accountbookforme.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>