<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SettingsFragment">

    <TextView
        android:id="@+id/label_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:padding="10dp"
        android:text="@string/title_categories"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/label_payments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:padding="10dp"
        android:text="@string/title_payments"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/label_stores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:padding="10dp"
        android:text="@string/title_stores"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />
</LinearLayout>
